[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amelia_datatools"
version = "1.0.0"
description = "Tools for Amelia dataset analysis."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9, <4.0"
dependencies = [
    'numpy==1.21.2',
    'matplotlib==3.7.1',
    'pandas==2.0.3',
    'tqdm==4.65.0',
    'easydict==1.10',
    'pyproj==3.6.1',
    'scipy==1.9.1',
    'seaborn==0.13.0',
    'pyyaml',
    'ipykernel',
    'imageio==2.34.0',
    'opencv-python==4.7.0.72',
    'networkx==3.1',
    'geopandas==0.14.0',
    'contextily==1.3.0',
]

authors = [
    {name = "Ingrid Navarro"},
    {name = "Pablo Ortega"},
    {name = "Jay Patrikar"},
    {name = "Haichuan Wang"},
    {name = "Jong Hoon Park"},
]

[tool.setuptools]
packages = ["amelia_datatools", "amelia_datatools.dataset_tools", "amelia_datatools.movement_tools", "amelia_datatools.trajectory_data_tools", "amelia_datatools.utils", "amelia_datatools.visualization_tools"]

[project.urls]
Repository = "https://github.com/AmeliaCMU/AmeliaDataTools"
Homepage = "https://ameliacmu.github.io"